k8s/edu-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bdc-asm-service
spec:
  type: NodePort
  selector:
    app: bdc-asm
  ports:
  - port: 80
    targetPort: 8050
