k8s/edu-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: demo.dashboard.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:

            name: bdc-asm-service
            port: 
              number: 80
